--- a/_posts/2019-01-12-php-oop-01.markdown
+++ b/_posts/2019-01-12-php-oop-01.markdown
@@ -19,7 +19,7 @@ tags:
 >OOP，面向对象编程是许多面向对象语言的特性，PHP作为最流行的web开发语言，其面向对象的特性除了和其他语言一样的：属性、类常量、访问控制（可见性）、对象继承、抽象类、对象接口……，同时还加入了Trait（我们在[之前的博客中](https://sunpwork.github.io/2019/01/03/php-trait/)介绍过的）这样的新特性，下面我们就简单的来了解一下PHP面向对象的基本概念（本章节案例内容来源 [PHP官方文档](http://php.net/manual/zh/language.oop5.php)）。
 
 # 属性与访问控制
-类的变量成员叫做“属性”，或者叫“字段”、“特征”。属性声明是有关键字public、protected或者private开头，然后跟一个普通的变量声明来组成。属性中的变量可以初始化，但是初始化的值必须是常数。
+类的变量成员叫做“属性”，或者叫“字段”、“特征”。属性声明是由关键字public、protected或者private开头，然后跟一个普通的变量声明来组成。属性中的变量可以初始化，但是初始化的值必须是常数。
 
 ## 属性声明案例
 ``` php
@@ -109,6 +109,7 @@ $obj->printHello(); // 输出 Public、Protected 和 Private
 class MyClass2 extends MyClass
 {
     // 可以对 public 和 protected 进行重定义，但 private 而不能
+
     protected $protected = 'Protected2';
 
     function printHello()
@@ -180,12 +181,14 @@ $myclass->Foo(); // 公有，受保护，私有都可以执行
 class MyClass2 extends MyClass
 {
     // 此方法为公有
+
     function Foo2()
     {
         $this->MyPublic();
         $this->MyProtected();// protected方法可以在子类中访问
 
         $this->MyPrivate(); // 这行会产生一个致命错误
+
     }
 }
 
@@ -306,7 +309,7 @@ $bar->printPHP();       // Output: 'PHP is great' bar继承了foo类的printItem
 ```
 
 # Static (静态)关键字
-声明类属性或方法为静态，就可以不实例化类而直接访问。静态属性不能通过一个类已实例化的对象来方法(静态方法可以)。同样静态属性和方法也有访问控制，如果没有指定默认为公有。由于静态方法不需要通过对象即可调用，所以伪变量`$this`在静态方法中不可用。静态属性不可以由对象通过->操作符在访问。
+声明类属性或方法为静态，就可以不实例化类而直接访问。静态属性不能通过一个类已实例化的对象来访问(静态方法可以)。同样静态属性和方法也有访问控制，如果没有指定默认为公有。由于静态方法不需要通过对象即可调用，所以伪变量`$this`在静态方法中不可用，同样静态方法中不能访问非静态属性。静态属性不可以由对象通过`->`操作符在访问。
 
 静态属性只能被初始化为文字或常量，不能使用表达式。所以可以把静态属性初始化为整数或数组，但不能初始化为另一个变量或函数返回值，也不能指向一个对象。
 ## 静态属性实例
